--- a/nextflow.config
+++ b/nextflow.config
@@ -28,9 +28,9 @@
 */
 
 env {
-    sample_path = "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam" // single character string of the path of the bam files directory. Must be either a folder that only contains unzipped bams, or an unzipped file or a .zip file. The last / can be added or not, as it is removed by nextflow file(). Example: sample_path="/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/results/19583_loot_1751560268/W621.hifi_reads.bam". Example: sample_path="/pasteur/helix/projects/19583_LOOT/dataset/hifi_reads_19583_loot.zip". Example: "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam". Example with spaces in the path: sample_path="/mnt/x/ROCURONIUM PROJECT/01 Primary data/04.Repertoire analysis/SORT1/SORT1 Seq-original/xlsx_to_fasta_1669018924/All/VL".
-    ref_path="$baseDir/dataset/coli_K12_MG1655_NC_000913.3_ORI_CENTERED/Ecoli-K12-MG1655_ORI_CENTERED.fasta" // single character string of the path of the reference genome.
-    kraken_db_path="/pasteur/helix/services/p01/banques-prod/prod/rel/kraken_standard/current/kraken/2.1.1/standard/" // single character string of the path of the kraken database folder.
+    sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/unzip_files" // single character string of the path of the bam files directory. Must be either a folder that only contains unzipped bams, or an unzipped file or a .zip file. The last / can be added or not, as it is removed by nextflow file(). Example: sample_path="/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/results/19583_loot_1751560268/W621.hifi_reads.bam". Example: sample_path="/pasteur/helix/projects/19583_LOOT/dataset/hifi_reads_19583_loot.zip". Example: sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/hifi_bam.zip". Example: "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam". Example: sample_path = "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam"Example with spaces in the path: sample_path="/mnt/x/ROCURONIUM PROJECT/01 Primary data/04.Repertoire analysis/SORT1/SORT1 Seq-original/xlsx_to_fasta_1669018924/All/VL".
+    ref_path="$baseDir/dataset/reference/coli_K12_MG1655_NC_000913.3_ORI_CENTERED/Ecoli-K12-MG1655_ORI_CENTERED.fasta" // single character string of the path of the reference genome.
+    kraken_db_path="/pasteur/helix/services/banques-prod/prod/rel/kraken_standard/current/kraken/2.1.1/standard/" // single character string of the path of the kraken database folder.
 }
 
 
@@ -212,6 +212,7 @@ process {
             module use /usr/local/package/modulefiles
             module load apptainer/1.2.4
         '''
+        penv = 'mpi' // penv stands for Parallel Environment (PE). 'mpi' is a common parallel environment name, often used for Message Passing Interface (MPI) jobs. Please, run qconf -spl on the cluster login node to list available parallel environments. Common PEs are smp, mpi, or similar.
         clusterOptions = "$add_options -S /bin/bash"
         maxRetries=3
         errorStrategy = {task.exitStatus in 137..143 ? 'retry' : 'terminate' }
