--- a/nextflow.config
+++ b/nextflow.config
@@ -29,8 +29,9 @@
 
 env {
     sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/unzip_files" // single character string of the path of the bam files directory. Must be either a folder that only contains unzipped bams, or an unzipped file or a .zip file. The last / can be added or not, as it is removed by nextflow file(). Example: sample_path="/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/results/19583_loot_1751560268/W621.hifi_reads.bam". Example: sample_path="/pasteur/helix/projects/19583_LOOT/dataset/hifi_reads_19583_loot.zip". Example: sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/hifi_bam.zip". Example: "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam". Example: sample_path = "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam"Example with spaces in the path: sample_path="/mnt/x/ROCURONIUM PROJECT/01 Primary data/04.Repertoire analysis/SORT1/SORT1 Seq-original/xlsx_to_fasta_1669018924/All/VL".
-    ref_path="$baseDir/dataset/reference/coli_K12_MG1655_NC_000913.3_ORI_CENTERED/Ecoli-K12-MG1655_ORI_CENTERED.fasta" // single character string of the path of the reference genome.
-    kraken_db_path="/pasteur/helix/services/banques-prod/prod/rel/kraken_standard/current/kraken/2.1.1/standard/" // single character string of the path of the kraken database folder.
+    ref_path = "$baseDir/dataset/reference/coli_K12_MG1655_NC_000913.3_ORI_CENTERED/Ecoli-K12-MG1655_ORI_CENTERED.fasta" // single character string of the path of the reference genome.
+    kraken_db_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/kraken2_mini" // single character string of the path of the kraken database folder. To use the large one on the Pasteur cluster: kraken_db_path = "/pasteur/helix/services/banques-prod/prod/rel/kraken_standard/current/kraken/2.1.1/standard/". To get a smaller one: wget https://genome-idx.s3.amazonaws.com/kraken/k2_standard_08gb_20230605.tar.gz ; tar -xvzf k2_standard_08gb_20230605.tar.gz.
+    cutoff = "50000" // single character string of the minimum length of reads to keep (in bases). Example: cutoff = "5000".
 }
 
 
@@ -44,11 +45,7 @@ env {
 */
 
 env {
-    ori_coord="2320711 2320942" // [2320711, 2320942] // Ecoli centered coordinates
-    ter_coord="4627368 4627400" //[4627368, 4627400] // Ecoli centered coordinates
-    color_coverage="5" // three integers for the color of the three coverage plots[1, 2, 5]
-    xlab="Ecoli Genome (bp)" // name of the reference genome for graphics
-    genome_size="4641652" // in bp
+
 }
 
 
@@ -78,11 +75,11 @@ add_options = ' ' // single character string of the additional option of slurm. 
 */
 
 env{
-    cute_path = "https://gitlab.pasteur.fr/gmillot/cute_little_R_functions/-/raw/v12.8/cute_little_R_functions.R" // single character string indicating the file (and absolute pathway) of the required cute_little_R_functions toolbox. With ethernet connection available, this can also be used: "https://gitlab.pasteur.fr/gmillot/cute_little_R_functions/raw/v5.1.0/cute_little_R_functions.R" or local "C:\\Users\\gmillot\\Documents\\Git_projects\\cute_little_R_functions\\cute_little_R_functions.R". Other example if no internet: cute_path="$projectDir/bin/cute_little_R_functions_v12.8.R"
+    cute_path = "./bin/cute_little_R_functions_12.8.R" // single character string indicating the file (and absolute pathway) of the required cute_little_R_functions toolbox. With ethernet connection available, this can also be used: "https://gitlab.pasteur.fr/gmillot/cute_little_R_functions/raw/v5.1.0/cute_little_R_functions.R" or local "C:\\Users\\gmillot\\Documents\\Git_projects\\cute_little_R_functions\\cute_little_R_functions.R". Other example if no internet: cute_path="$projectDir/bin/cute_little_R_functions_v12.8.R"
     template_rmd_path = "./bin/html_report_template.rmd"
 }
 out_path_ini = "$projectDir/results" // single character string of where the output files will be saved. Example out_path_ini = '.' for where the main.nf run is executed or out_path_ini = "$projectDir/results" to put the results in a result folder (created if required), $projectDir indicating where the main.nf run is executed. Example: out_path_ini = '/mnt/c/Users/gmillot/Desktop'. Example : out_path_ini="/pasteur/helix/projects/BioIT/gmillot/08002_bourgeron/results". Warning: this does not work: out_path_ini = "/mnt/share/Users/gmillot/Desktop"
-result_folder_name = "19583_loot" // single character string.of the name of the folder where the results files are dorpped
+result_folder_name = "hifi_pacbio_QC" // single character string.of the name of the folder where the results files are dorpped
 
 
 /*
@@ -233,22 +230,15 @@ process {
         memory='1G' // only used when name = "local" in the executor part above
     }
 
-    withLabel: r_ext {
-        container='gmillot/r_v4.1.2_ig_clustering_v1.3:gitlab_v9.9'
-        cpus=1 // only used when name = "local" in the executor part above
-        memory='50G' // only used when name = "local" in the executor part above
-    }
-
-    withLabel: r_ext_12cpu { // for parallelization processes
-        container='gmillot/r_v4.1.2_ig_clustering_v1.3:gitlab_v9.9'
-        cpus=12 // only used when name = "local" in the executor part above
-        memory='64G' // only used when name = "local" in the executor part above
-    }
-
     withLabel: bioconvert {
         container='bioconvert/bioconvert:0.6.1'
         errorStrategy='ignore'
         cpus=1
+    }
+
+    withLabel: kraken{
+        container="evolbioinfo/kraken:v2.0.8-beta"
+        cpus=20
     }
 
     withLabel: fastqc {
@@ -262,21 +252,10 @@ process {
         cpus=1
     }
 
-    withLabel: samtools {
-        container='gmillot/samtools_v1.14:gitlab_v8.0'
-        cpus=1
-        memory='1G'
-    }
-
-    withLabel: bedtools {
-        container='gmillot/bedtools_v2.30.0:gitlab_v8.0'
-        cpus=12
-        memory='64G'
-    }
-
-    withLabel: goalign {
-        cpus=12
-        container = 'evolbioinfo/goalign:dev5ed865a'
+    withLabel: r_ext {
+        container='gmillot/r_v4.1.2_extended_v4.0:gitlab_v11.2'
+        cpus=1 // only used when name = "local" in the executor part above
+        memory='50G' // only used when name = "local" in the executor part above
     }
 
 }
