now kraken always run and integrated in multiqc

--- a/example_of_result/hifi_pacbio_QC_1752227997/reports/nextflow.config
+++ b/example_of_result/hifi_pacbio_QC_1752227997/reports/nextflow.config
@@ -191,6 +191,7 @@ apptainer {
 // provide the default directives for all the processes in the main.nf pipeline calling this config file
 process {
 // directives for all the processes
+    cpus = 1
     memory='3G'
     executor = "${system_exec}"
     // process.shell = ['/bin/bash', '-euo', 'pipefail']
@@ -231,12 +232,13 @@ process {
 
     withLabel: bioconvert {
         container='bioconvert/bioconvert:0.6.1'
-        //errorStrategy='ignore'
+        errorStrategy='ignore'
         cpus=1
     }
 
     withLabel: kraken{
-        container="evolbioinfo/kraken:v2.1.3"
+        container="evolbioinfo/kraken:v2.0.8-beta"
+        cpus=20
     }
 
     withLabel: fastqc {
@@ -245,8 +247,8 @@ process {
     }
 
     withLabel: multiqc {
-        container='multiqc/multiqc:v1.30'
-        //errorStrategy='ignore'
+        container='ewels/multiqc:1.10.1'
+        errorStrategy='ignore'
         cpus=1
     }
 
