project accomplished for QC

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 /*
 #########################################################################
 ##                                                                     ##
-##     nextflow.config of 19583_loot                                   ##
+##     nextflow.config of bam_fastq_qc                                 ##
 ##                                                                     ##
 ##     gmillot A. Millot                                               ##
 ##     Bioinformatics and Biostatistics Hub                            ##
@@ -28,10 +28,9 @@
 */
 
 env {
-    sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/unzip_files" // single character string of the path of the bam files directory. Must be either a folder that only contains unzipped bams, or an unzipped file or a .zip file. The last / can be added or not, as it is removed by nextflow file(). Example: sample_path="/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/results/19583_loot_1751560268/W621.hifi_reads.bam". Example: sample_path="/pasteur/helix/projects/19583_LOOT/dataset/hifi_reads_19583_loot.zip". Example: sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/hifi_bam.zip". Example: "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam". Example: sample_path = "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam"Example with spaces in the path: sample_path="/mnt/x/ROCURONIUM PROJECT/01 Primary data/04.Repertoire analysis/SORT1/SORT1 Seq-original/xlsx_to_fasta_1669018924/All/VL".
-    ref_path = "$baseDir/dataset/reference/coli_K12_MG1655_NC_000913.3_ORI_CENTERED/Ecoli-K12-MG1655_ORI_CENTERED.fasta" // single character string of the path of the reference genome.
+    sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/unzip_bam_files" // single character string of the path of the bam or fastq files directory. Must be either a folder that only contains unzipped files, or a single unzipped file or a .zip file. The last / can be added or not, as it is removed by nextflow file(). Example: sample_path="/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/results/19583_loot_1751560268/W621.hifi_reads.bam". Example: sample_path="/pasteur/helix/projects/19583_LOOT/dataset/hifi_reads_19583_loot.zip". Example: sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/hifi_bam.zip". Example: "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam". Example: sample_path = "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam"Example with spaces in the path: sample_path="/mnt/x/ROCURONIUM PROJECT/01 Primary data/04.Repertoire analysis/SORT1/SORT1 Seq-original/xlsx_to_fasta_1669018924/All/VL".
     kraken_db_path = "/mnt/c/Users/gmillot/kraken2_mini_database" // single character string of the path of the kraken database folder. To use the large one on the Pasteur cluster: kraken_db_path = "/pasteur/helix/services/banques-prod/prod/rel/kraken_standard/current/kraken/2.1.1/standard/". To get a smaller one: wget https://genome-idx.s3.amazonaws.com/kraken/k2_standard_08gb_20230605.tar.gz ; tar -xvzf k2_standard_08gb_20230605.tar.gz.
-    cutoff = "50000" // single character string of the minimum length of reads to keep (in bases). Example: cutoff = "5000".
+    cutoff = "10000" // single character string of the minimum length of reads to keep (in bases). Example: cutoff = "5000".
 }
 
 
