--- a/nextflow.config
+++ b/nextflow.config
@@ -28,8 +28,8 @@
 */
 
 env {
-    sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/unzip_bam_files" // single character string of the path of the bam or fastq files directory. Must be either a folder that only contains unzipped files, or a single unzipped file or a .zip file. The last / can be added or not, as it is removed by nextflow file(). Example: sample_path="/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/results/19583_loot_1751560268/W621.hifi_reads.bam". Example: sample_path="/pasteur/helix/projects/19583_LOOT/dataset/hifi_reads_19583_loot.zip". Example: sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/hifi_bam.zip". Example: "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam". Example: sample_path = "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam"Example with spaces in the path: sample_path="/mnt/x/ROCURONIUM PROJECT/01 Primary data/04.Repertoire analysis/SORT1/SORT1 Seq-original/xlsx_to_fasta_1669018924/All/VL".
-    kraken_db_path = "/mnt/c/Users/gmillot/kraken2_mini_database" // single character string of the path of the kraken database folder. To use the large one on the Pasteur cluster: kraken_db_path = "/pasteur/helix/services/banques-prod/prod/rel/kraken_standard/current/kraken/2.1.1/standard/". To get a smaller one: wget https://genome-idx.s3.amazonaws.com/kraken/k2_standard_08gb_20230605.tar.gz ; tar -xvzf k2_standard_08gb_20230605.tar.gz.
+    sample_path = "/mnt/c/Users/gmillot/Desktop/hifi_pacbio_seq/unzip_bam_files" // single character string of the path of the bam or fastq files directory. Must be either a folder that only contains unzipped files, or a single unzipped file or a .zip file. The last / can be added or not, as it is removed by nextflow file(). Example: sample_path="/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/results/19583_loot_1751560268/W621.hifi_reads.bam". Example: sample_path="/pasteur/helix/projects/19583_LOOT/dataset/hifi_reads_19583_loot.zip". Example: sample_path = "/mnt/c/Users/gmillot/Documents/Git_projects/19583_loot/dataset/hifi_bam/hifi_bam.zip". Example: "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam". Example: sample_path = "https://zenodo.org/records/15798125/files/W621.hifi_reads.bam"Example with spaces in the path: sample_path="/mnt/x/ROCURONIUM PROJECT/01 Primary data/04.Repertoire analysis/SORT1/SORT1 Seq-original/xlsx_to_fasta_1669018924/All/VL".
+    kraken_db_path = "/mnt/c/Users/gmillot/kraken2_mini_database" // single character string of the path of the kraken database folder. To use the large one on the Pasteur cluster: kraken_db_path = "/pasteur/helix/services/banques-prod/prod/rel/kraken_standard/current/kraken/2.1.1/standard/". Warning: this big database requires 128G for the kraken process (set the value below around line 240). To get a smaller kraken database: wget https://genome-idx.s3.amazonaws.com/kraken/k2_standard_08gb_20230605.tar.gz ; tar -xvzf k2_standard_08gb_20230605.tar.gz. This one is ok with 20G.
     cutoff = "10000" // single character string of the minimum length of reads to keep (in bases). Example: cutoff = "5000".
 }
 
@@ -197,8 +197,8 @@ process {
 // end directives for all the processes
 
     if(system_exec == 'slurm'){
-        queue = "$slurm_queue"
-        clusterOptions = "$slurm_qos $add_options"
+        queue = "${slurm_queue}"
+        clusterOptions = "${slurm_qos} ${add_options}"
         scratch=false
         maxRetries=3
         errorStrategy = {task.exitStatus in 137..143 ? 'retry' : 'terminate' }
@@ -236,11 +236,13 @@ process {
 
     withLabel: kraken{
         container="evolbioinfo/kraken:v2.1.3"
+        memory='64G'
     }
 
     withLabel: fastqc {
         container='evolbioinfo/fastqc:v0.11.8'
-        cpus=1 // only used when name = "local" in the executor part above
+        //cpus=1 // only used when name = "local" in the executor part above
+        memory='64G'
     }
 
     withLabel: multiqc {
@@ -252,7 +254,7 @@ process {
     withLabel: r_ext {
         container='gmillot/r_v4.1.2_extended_v4.0:gitlab_v11.2'
         cpus=1 // only used when name = "local" in the executor part above
-        memory='50G' // only used when name = "local" in the executor part above
+        memory='64G' // only used when name = "local" in the executor part above
     }
 
 }
